<?xml version="1.0"?>
<package>
  <name>asr_grid_creator</name>
  <version>1.0.0</version>
  <description>
    This package can generate a grid for the current map. Each grid_point
    defines a position where the robot has to move to. The grid can be used
    later on in the asr_direct_search_manager as a basis to generate poses to
    search the map. At each grid_point the robot will search around him. All
    gird_points together should cover the map.
  </description>
  <author>Borella Jocelyn, Karrenbauer Oliver, Meißner Pascal</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>asr_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros-kinetic-move-base</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>asr_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>asr_robot_model_services</run_depend>
  <run_depend>ros-kinetic-move-base</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
